feat(api)-added some new apis
