# src/schemas/strategy_schema.js
@@ -1,15 +1,0 @@
-import mongoose from 'mongoose';
-
-const { Schema } = mongoose;
-
-const strategySchema = new Schema({
-  name: { type: String, trim: true, required: 'name is required' },
-  description: { type: String, trim: true, required: 'name is required' },
-  createdTime: { type: Date, default: Date.now },
-  isActive: { type: Boolean, default: true },
-  postedBy: { type: Schema.Types.ObjectId, required: 'postedBy is required' },
-  strategyRevisions: [{ type: Schema.Types.ObjectId, ref: 'strategy_revisions' }],
-});
-
-const Strategy = mongoose.model('strategies', strategySchema);
-export default Strategy;
